--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </div>
     </div>
+    <script src="https://s22.cnzz.com/z_stat.php?id=1271234111&web_id=1271234111" language="JavaScript"></script>
 </body>
 
 </html>
